--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@vercel/analytics": "^1.3.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.27.0"
+    "react-helmet-async": "^2.0.5",
+    "react-router-dom": "^6.27.0",
+    "sitemap": "^8.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
